--- a/templates/base.html
+++ b/templates/base.html
@@ -2,16 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scala=1.0">
+
     <title>{% block title %}{% endblock %}</title>
+
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="shortcut icon" href="/static/media/flask-icon.png" type="image/png">
-    <script src="/static/js/app.js"></script>
 </head>
 <body>
 
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        <div id="alert_signup" class="alert {{ messages[0][0] }}">
+            {{ messages[0][1] }}
+
+            <span onclick="close_alert()" class="btn-close">&times;</span>
+        </div>
+        {% endif %}
+    {% endwith %}
     <div>
         {% block content %}{% endblock %}
     </div>
 
+    <script src="/static/js/app.js"></script>
 </body>
 </html>
