--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,5 +30,20 @@ input {
 
 button {
     min-height: 30px;
+    background-color: black;
+    color: white;
+    border: solid 1px gray;
+    border-radius: 10%;
 }
 
+.btn-cancel {
+    background-color: #A9A9A9;
+}
+
+.content {
+    margin-top: 10%;
+}
+
+a {
+    color: black
+}
