--- a/templates/account/sign_in.html
+++ b/templates/account/sign_in.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h2>{% block title %}Sing in{% endblock %}</h2>
-
+    <br>
     <form method="post">
         <label>Username</label><br>
         <input type="text" name="username"><br>
@@ -11,7 +11,7 @@
         <br>
         <button type="submit">Login</button>
         <a href="/">
-            <button type="button" >Cancel</button>
+            <button type="button" class="btn-cancel">Cancel</button>
         </a>
         <br>
         <a href="/account/sign_up">Create account</a>
