--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
         </div>
         {% endif %}
     {% endwith %}
-    <div>
+    <div class="content">
         {% block content %}{% endblock %}
     </div>
 
