--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,10 +4,7 @@ body {
     font-family: "Times New Roman", Times, serif;
 }
 
-.alert {
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
+
 .failed {
     background-color: #ffdddd;
 }
@@ -17,33 +14,27 @@ body {
 .btn-close {
     cursor: pointer;
     float: right;
-    font-size: 1.5rem;
-    margin-right: 10px;
-    padding-left: 5px;
-    padding-right: 5px;
-    border: solid gray 1px;
 }
 
 input {
     min-width: 300px;
 }
 
-button {
-    min-height: 30px;
-    background-color: black;
-    color: white;
-    border: solid 1px gray;
-    border-radius: 10%;
-}
-
-.btn-cancel {
-    background-color: #A9A9A9;
-}
-
-.content {
+.container {
     margin-top: 10%;
 }
 
 a {
     color: black
 }
+a:hover {
+    color: gray;
+}
+
+
+table {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 500px;
+}
+
