--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scala=1.0">
 
     <title>{% block title %}{% endblock %}</title>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="shortcut icon" href="/static/media/flask-icon.png" type="image/png">
@@ -16,13 +18,17 @@
         <div id="alert_signup" class="alert {{ messages[0][0] }}">
             {{ messages[0][1] }}
 
-            <span onclick="close_alert()" class="btn-close">&times;</span>
+            <button onclick="close_alert()" type="button" class="btn-close"></button>
         </div>
         {% endif %}
     {% endwith %}
-    <div class="content">
+    <div class="container">
         {% block content %}{% endblock %}
     </div>
+
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
     <script src="/static/js/app.js"></script>
 </body>
