--- a/templates/account/sign_in.jinja2
+++ b/templates/account/sign_in.jinja2
@@ -1,9 +1,11 @@
-{% extends "base.html" %}
+{% extends "base.jinja2" %}
+{% from 'bootstrap5/form.html' import render_hidden_errors %}
 
 {% block content %}
     <h2>{% block title %}Sing in{% endblock %}</h2>
     <br>
     <form method="post" autocomplete="off">
+        {{ render_hidden_errors(form) }}
         {{ form.csrf_token }}
 
         {{ form.username.label }}<br>
@@ -17,6 +19,6 @@
             <button class="btn btn-secondary" type="button" class="btn-cancel">Cancel</button>
         </a>
         <br>
-        <a href="/account/sign_up">Create account</a>
+        <a href="{{ url_for('account_app.sign_up') }}">Create account</a>
     </form>
 {% endblock %}
