--- a/templates/account/sign_up.jinja2
+++ b/templates/account/sign_up.jinja2
@@ -2,27 +2,28 @@
 {% from 'bootstrap5/form.html' import render_hidden_errors %}
 
 {% block content %}
+
     <h2>{% block title %}Sing up{% endblock %}</h2>
     <br>
     <form method="post" autocomplete="off">
         {{ render_hidden_errors(form) }}
         {{ form.csrf_token }}
 
-        {{ form.username.label }}<br>
-        {{ form.username }}<br>
+        {{ form.username.label(class="d-block text-start") }}
+        {{ form.username(class="form-control") }}<br>
 
-        {{ form.email.label }}<br>
-        {{ form.email }}<br>
+        {{ form.email.label(class="d-block text-start") }}
+        {{ form.email(class="form-control") }}<br>
 
-        {{ form.password.label }}<br>
-        {{ form.password }}<br>
+        {{ form.password.label(class="d-block text-start") }}
+        {{ form.password(class="form-control") }}<br>
 
-        {{ form.confirm.label }}<br>
-        {{ form.confirm }}<br>
+        {{ form.confirm.label(class="d-block text-start") }}
+        {{ form.confirm (class="form-control")}}<br>
         <br>
-        <button class="btn btn-dark" type="submit">Sign up</button>
+        <button class="btn btn-outline-dark" type="submit">Sign up</button>
         <a href="{{ url_for('account_app.sign_in') }}">
-            <button class="btn btn-secondary" type="button" class="btn-cancel">Cancel</button>
+            <button class="btn btn-outline-secondary" type="button" class="btn-cancel">Cancel</button>
         </a>
     </form>
 
