--- a/templates/account/home.jinja2
+++ b/templates/account/home.jinja2
@@ -5,15 +5,15 @@
         {% block title %}Wellcome{% endblock %}, {{ current_user.username }}.
     </h2>
 
-    <button onclick="window.location.href='/account/logout'" class="btn btn-dark">Logout</button>
-    <button onclick="window.location.href='/account/profile'" class="btn btn-secondary">Profile</button>
+    <a href="{{ url_for('account_app.log_out') }}" class="btn btn-outline-dark">Logout</a>
+    <a href="{{ url_for('account_app.profile_view') }}" class="btn btn-outline-secondary">Profile</a>
 
     <br><br>
     <a href="/">Index</a>
 
     <hr>
     <br>
-    <table class="table">
+    <table class="table table-dark">
         <tr>
             <th>Id</th>
             <th>Username</th>
@@ -24,7 +24,7 @@
                 <td>{{ u.id }}</td>
                 <td>{{ u.username }}</td>
                 <td>
-                    <button onclick="window.location.href='/account/home?del={{ u.id }}'" class="btn">&times;</button>
+                    <a href='/account/home?del={{ u.id }}' class="btn btn-secondary text-white">&times;</button>
                 </td>
             </tr>
         {% endfor %}
