--- a/templates/base.jinja2
+++ b/templates/base.jinja2
@@ -12,18 +12,21 @@
     <link rel="shortcut icon" href="/static/media/flask-icon.png" type="image/png">
 </head>
 <body>
+    <div class="container vh-100 d-flex justify-content-center align-items-center text-center">
+        <div class="card" style="width: 50rem;">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                <div id="alert_signup" class="alert alert-{{ messages[0][0] }}">
+                    {{ messages[0][1] }}
 
-    {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-        <div id="alert_signup" class="alert {{ messages[0][0] }}">
-            {{ messages[0][1] }}
-
-            <button onclick="close_alert()" type="button" class="btn-close"></button>
+                    <button onclick="close_alert()" type="button" class="btn-close"></button>
+                </div>
+                {% endif %}
+            {% endwith %}
+            <div class="card-body">
+                {% block content %}{% endblock %}
+            </div>
         </div>
-        {% endif %}
-    {% endwith %}
-    <div class="container">
-        {% block content %}{% endblock %}
     </div>
 
     <!-- Bootstrap -->
