--- a/templates/account/sign_up.jinja2
+++ b/templates/account/sign_up.jinja2
@@ -5,19 +5,40 @@
 
     <h2>{% block title %}Sing up{% endblock %}</h2>
     <br>
-    <form method="post" autocomplete="off">
+    <form method="post" autocomplete="off" novalidate>
         {{ render_hidden_errors(form) }}
         {{ form.csrf_token }}
 
         {{ form.username.label(class="d-block text-start") }}
-        {{ form.username(class="form-control") }}<br>
-
+        {{ form.username(class="form-control") }}
+        {% if errors %}
+            <small class="text-danger d-block text-start"><ul>
+                {% for e in errors['username'] %}
+                    <li>{{ e }}</li>
+                {% endfor %}
+            </ul></small>
+        {% endif %}
+        <br>
         {{ form.email.label(class="d-block text-start") }}
-        {{ form.email(class="form-control") }}<br>
-
+        {{ form.email(class="form-control") }}
+        {% if errors %}
+            <small class="text-danger d-block text-start"><ul>
+                {% for e in errors['email'] %}
+                    <li>{{ e }}</li>
+                {% endfor %}
+            </ul></small>
+        {% endif %}
+        <br>
         {{ form.password.label(class="d-block text-start") }}
-        {{ form.password(class="form-control") }}<br>
-
+        {{ form.password(class="form-control") }}
+        {% if errors %}
+            <small class="text-danger d-block text-start"><ul>
+                {% for e in errors['password'] %}
+                    <li>{{ e }}</li>
+                {% endfor %}
+            </ul></small>
+        {% endif %}
+        <br>
         {{ form.confirm.label(class="d-block text-start") }}
         {{ form.confirm (class="form-control")}}<br>
         <br>
