--- a/templates/account/sign_in.jinja2
+++ b/templates/account/sign_in.jinja2
@@ -16,7 +16,7 @@
         {{ form.password(class="form-control") }}<br>
         <br>
         <button class="btn btn-outline-dark" type="submit">Login</button>
-        <a href="/">
+        <a href="{{ url_for('index') }}">
             <button class="btn btn-outline-secondary" type="button" class="btn-cancel">Cancel</button>
         </a>
         <br>
