--- a/templates/account/sign_up.jinja2
+++ b/templates/account/sign_up.jinja2
@@ -42,9 +42,9 @@
         {{ form.confirm.label(class="d-block text-start") }}
         {{ form.confirm (class="form-control")}}<br>
         <br>
-        <button class="btn btn-outline-dark" type="submit">Sign up</button>
+        <button class="btn btn-outline-dark w-25" type="submit">Sign up</button>
         <a href="{{ url_for('account_app.sign_in') }}">
-            <button class="btn btn-outline-secondary" type="button" class="btn-cancel">Cancel</button>
+            <button class="btn btn-outline-secondary w-25" type="button" class="btn-cancel">Cancel</button>
         </a>
     </form>
 
