--- a/templates/account/sign_in.jinja2
+++ b/templates/account/sign_in.jinja2
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-    <h2>{% block title %}Sing in{% endblock %}</h2>
+    <h2>{% block title %}Sign in{% endblock %}</h2>
     <br>
     <form method="post" autocomplete="off">
         {{ render_hidden_errors(form) }}
