--- a/templates/account/sign_up.jinja2
+++ b/templates/account/sign_up.jinja2
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-    <h2>{% block title %}Sing up{% endblock %}</h2>
+    <h2>{% block title %}Sign up{% endblock %}</h2>
     <br>
     <form method="post" autocomplete="off" novalidate>
         {{ render_hidden_errors(form) }}
