--- a/templates/account/delete.jinja2
+++ b/templates/account/delete.jinja2
@@ -9,9 +9,9 @@
         
         <p>Are you sure? the <b>{{ username }}</b> account will be deleted!</p>
 
-        <button class="btn btn-outline-dark w-25" type="submit">Delete</button>
+        <button class="btn btn-dark w-25" type="submit">Delete</button>
         <a href="{{ url_for('account_app.home') }}">
-            <button class="btn btn-outline-secondary w-25" type="button" class="btn-cancel">Cancel</button>
+            <button class="btn btn-secondary w-25" type="button" class="btn-cancel">Cancel</button>
         </a>
     </form>
     
