--- a/templates/account/change_password.jinja2
+++ b/templates/account/change_password.jinja2
@@ -4,18 +4,38 @@
 
     <h2>{% block title %}Change password{% endblock %}</h2>
     <br>
-    <form method="post" autocomplete="off">
+    <form method="post" autocomplete="off" style="max-width: 600px; margin: 0 auto;">
         {{ form.csrf_token }}
-        <div class="mb-3">
-            {{ form.old_password.label(class="d-block text-start") }}
-            {{ form.old_password(class="form-control") }}
-            {{ form.new_password.label(class="d-block text-start") }}
-            {{ form.new_password(class="form-control") }}
-            {{ form.confirm.label(class="d-block text-start") }}
-            {{ form.confirm(class="form-control") }}
-        </div>
 
-        <button class="btn btn-outline-dark w-50" type="submit">Change</button>
+        <div class="row mt-2">
+            <div class="col-sm-12 col-md-3 label">
+                {{ form.old_password.label(class="d-block text-start") }}
+            </div>
+            <div class="col-sm-12 col-md-7">
+                {{ form.old_password(class="form-control") }}
+            </div>
+        </div>
+        <div class="row mt-2">
+            <div class="col-sm-12 col-md-3 label">
+                {{ form.new_password.label(class="d-block text-start") }}
+            </div>
+            <div class="col-sm-12 col-md-7">
+                {{ form.new_password(class="form-control") }}
+            </div>
+        </div>
+        <div class="row mt-2">
+            <div class="col-sm-12 col-md-3 label">
+                {{ form.confirm.label(class="d-block text-start") }}
+            </div>
+            <div class="col-sm-12 col-md-7">
+                {{ form.confirm(class="form-control") }}
+            </div>
+        </div>
+        <br>
+        <button class="btn btn-dark w-25" type="submit">Change</button>
+        <a href="{{ url_for('account_app.home') }}">
+            <button class="btn btn-secondary w-25" type="button" class="btn-cancel">Cancel</button>
+        </a>
     </form>
     
 {% endblock %}
